--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cnpj": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
-    "styled-components": "^5.3.6"
+    "react-toastify": "^9.1.1",
+    "styled-components": "^5.3.6",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
