--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@reduxjs/toolkit": "^1.9.1",
     "cnpj": "^4.0.1",
     "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
     "validator": "^13.7.0"
   },
